infrastructure/network/ingress-controller/ingress-nginx/example/foo/pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: foo-app
  namespace: ingress-nginx
  labels:
    app: foo-app
spec:
  containers:
  - name: foo-app
    image: hashicorp/http-echo:0.2.3
    args:
    - "-text=foo"
